# Fulcrum.ai

./: .env  .gitignore  Dockerfile  README.md  env.sh  pyproject.toml  requirements.txt  run.sh  setup-dev-env.sh
chatbot/endpoints/: comms.py  train.py
dev/: env_pdf_chunker.sh  env_script.sh
dev/src/chatbot/: __init__.py
dev/src/chatbot/endpoints/: comms.py
dev/src/fulcrum/: index.py
dev/src/fulcrum/models/: chatbot.py
dev/src/gcloud/: __init__.py  bucket_storage.py
fulcrum/: index.py
fulcrum/db/: chatbot_config.py  db_connect.py
fulcrum/endpoints/: chatbot_ops.py  user.py
fulcrum/models/: chatbot.py  user.py
src/: __init__.py
src/chatbot/: index.py
src/chatbot/endpoints/: auth.py  comms.py  train.py
src/fulcrum/: __init__.py  index.py
src/fulcrum/auth/: .env.rtf  auth_jwt.py  user.py
src/fulcrum/config/: auth.py
src/fulcrum/db/: chatbot_config.py  db_connect.py  faq.py  user.py  utils.py
src/fulcrum/endpoints/: auth.py  chatbot_ops.py  docs.py  faq.py  user.py  user_ops.py
src/fulcrum/models/: chatbot.py  core.py  user.py
src/gcloud/: bucket_storage.py  gptutils.py  pdfparser.py  pdfparser2.py  serverless.py  services.yaml  vectordb.py
tests/: bucket.py  deploy.py  gpt.py  pdf.py  vector.py
