[tool.poetry]
name = "fulcrum-ai-chatbot-proj"
version = "0.1.0"
description = "SaaS based Chatbot Generation service"
authors = ["aryans1204 <arshar1204@gmail.com>"]
license = "MIT"
readme = "README.md"
#packages = [{include = "fulcrum_ai_chatbot_proj"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.0.240"
openai = "^0.27.8"
fastapi = "^0.97.0"
pandas = "^2.0.2"
numpy = "^1.25.0"
requests = "^2.31.0"
google-cloud-run = "^0.8.0"
google-cloud-storage = "^2.9.0"
google-cloud-compute = "^1.11.0"
google-cloud-aiplatform = "^1.26.0"
mongoengine = "^0.27.0"
update = "^0.0.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
websockets = "^11.0.3"
pyyaml = "^6.0"
command = "^0.1.0"
chromadb = "^0.3.26"
pypdf2 = "^3.0.1"
google-cloud-documentai = "^2.16.1"
transformers = "^4.30.2"
pytest-shutil = "^1.7.0"
authlib = "^1.2.1"
itsdangerous = "^2.1.2"
httpx = "^0.24.1"
python-multipart = "^0.0.6"
chromadb-client = "^0.4.3.dev0"
tiktoken = "^0.4.0"
pyjwt = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
